--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "daxter1987/laravelEnv",
+    "name": "daxter1987/laravel-env",
     "description": "Environment for laravel applications with mysql",
     "license": "MIT",
     "authors": [
