--- a/src/resources/docker-compose.yml
+++ b/src/resources/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   laravel:
-    image: daxter1987/laravel
+    image: daxter1987/laravel:1.0.1
     container_name: CONTAINER_NAME
     ports:
       - "8080:80"
